--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@
   color:#f4f4f4 !important;
 }
 body{
+  width:100%;
   background:#262626;
   overflow-x: hidden;
   font-family:"AGENCYB","AGENCYR","Heidenberg","Freudian Two Demo","Bobby rough soft","Norwester";
@@ -90,7 +91,7 @@ body{
 
 }
 .text-overlay{
-  width:100vw;
+  /* width:100vw; */
   height:100vh;
   overflow:hidden;
   position:absolute;
@@ -112,6 +113,7 @@ body{
   background-size:cover;
   background-position:top;
   background-repeat:no-repeat;
+  background-attachment: fixed;
   width:100vw;
   /* position:relative; */
   height:130vh;
@@ -201,7 +203,7 @@ body{
 .smooth-card:hover .smooth-card-alc{
   color:#262626;
 }
-.strong-card:hover .smooth-card-alc{
+.strong-card:hover .strong-card-alc{
   color:#262626;
 }
 .footer-links{
