--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@
   font-family:"Myanmar Sans Pro";
   src:url(../fonts/MyanmarSansPro-Regular.woff);
 }
+@font-face{
+  font-family:"Lobster";
+  src:url(../fonts/Lobster\ 1.4.woff);
+}
 
 .text-white{
   color:#f4f4f4 !important;
@@ -52,7 +56,7 @@ body{
   /* color:#d69366 !important; */
   letter-spacing:.1em;
   font-family: serif;
-  font-size:100px;
+  font-size:8em;
   font-weight:bold;
   text-transform:uppercase;
 }
@@ -86,7 +90,7 @@ body{
   color:#fff;
   letter-spacing:.25em;
   font-family:"Freudian Two Demo";
-  font-size:30px;
+  font-size:3em;
   text-align:left;
 
 }
@@ -299,3 +303,9 @@ body{
 .pace.pace-inactive {
   display: none;
 }
+
+.contact-info{
+  letter-spacing:.1em;
+  font-family: "Lobster";
+}
+
