--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body{
 .main-title{
   /* color:#d69366 !important; */
   letter-spacing:.1em;
-  font-family: serif;
+  font-family: "Freudian Two Demo";
   font-size:8em;
   font-weight:bold;
   text-transform:uppercase;
