--- a/css/loading-bar.css
+++ b/css/loading-bar.css
@@ -70,9 +70,9 @@
 	font-weight: bold;
 	font-family: Helvetica, Arial, "Lucida Grande", sans-serif;
 
-	-webkit-box-shadow: 120px 0 #fff, 240px 0 #fff;
-	-ms-box-shadow: 120px 0 #fff, 240px 0 #fff;
-	box-shadow: 120px 0 #fff, 240px 0 #fff;
+	-webkit-box-shadow: 120px 0 transparent, 240px 0 transparent;
+	-ms-box-shadow: 120px 0 transparent, 240px 0 transparent;
+	box-shadow: 120px 0 transparent, 240px 0 transparent;
 }
 
 .pace .pace-progress:after {
@@ -194,7 +194,7 @@
 	width: 100%;
 	height: 28px;
 	z-index: 2001;
-	box-shadow: inset 0 0 0 2px #d69366, inset 0 0 0 7px #FFF;
+	box-shadow: inset 0 0 0 2px #d69366, inset 0 0 0 7px transparent;
 	border-radius: 10px;
 }
 
