--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body{
 
 }
 .hero{
-  background:url(../img/Final/HRS\ \(2\).jpg);
+  background:url(../img/Final/HRS\ \(2\)-1.jpg);
   background-size:cover;
   background-position:top;
   background-repeat:no-repeat;
